# maxima

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-ci.yml
maxima-bootstrap/: Cargo.toml
maxima-bootstrap/src/: macos.rs  main.rs
maxima-cli/: Cargo.toml  build.rs
maxima-cli/src/: main.rs
maxima-lib/: Cargo.toml  build.rs
maxima-lib/src/: lib.rs
maxima-lib/src/content/: downloader.rs  exclusion.rs  manager.rs  mod.rs  zip.rs  zlib.rs
maxima-lib/src/core/: background_service_nix.rs  background_service_win.rs  clients.rs  cloudsync.rs  concurrency.rs  dip.rs  ecommerce.rs  endpoints.rs  error.rs  launch.rs  library.rs  mod.rs  service_layer.rs
maxima-lib/src/core/auth/: context.rs  hardware.rs  login.rs  mod.rs  pc_sign.rs  storage.rs  token_info.rs
maxima-lib/src/core/graphql/: AcceptFriendInvitation.gql  CancelFriendInvitation.gql  CriticalGetUserPlayer.gql  FullGameOverview.gql  GameBundle.gql  GameImages.gql  GameSystemRequirements.gql  GetBasicPlayer.gql  GetComposableGameHub.gql  GetDlcsForGame.gql  GetGamePlayTimes.gql  GetGameProductOfferIds.gql  GetHeroBackgroundImage.gql  GetInitUserData.gql  GetMyFriendInvitations.gql  GetPlayerByPdLite.gql  GetScreenshotsAndVideos.gql  GetSubscriptionStatus.gql  GetUserPlayer.gql  RejectFriendInvitation.gql  SendFriendInvitation.gql  availableBuilds.gql  gameAchievements.gql  gameSessionEnd.gql  getGameProducts.gql  getLegacyCatalogDefs.gql  getPreloadedOwnedGames.gql  grantEntitlement.gql  inGamePresenceData.gql  ownedGameAchievements.gql
maxima-lib/src/core/graphql/contentful/: GetProductFeatureTable.gql  README.md
maxima-lib/src/core/manifest/: dip.rs  mod.rs  pre_dip.rs
maxima-lib/src/gameinfo/: mod.rs
maxima-lib/src/gamesettings/: mod.rs
maxima-lib/src/lsx/: connection.rs  service.rs  types.rs  winproc.rs
maxima-lib/src/lsx/request/: account.rs  auth.rs  challenge.rs  igo.rs  license.rs  profile.rs
maxima-lib/src/ooa/: mod.rs
maxima-lib/src/rtm/: client.rs  connection.rs  mod.rs  test.json
maxima-lib/src/rtm/proto/: README.md  common.proto  responses.proto
maxima-lib/src/unix/: fs.rs  mod.rs  wine.reg  wine.rs
maxima-lib/src/util/: dll_injector.rs  github.rs  log.rs  mod.rs  native.rs  registry.rs  service.rs  service_nix.rs  service_win.rs  simple_crypto.rs  wmi_utils.rs
maxima-native/: Cargo.toml  build.rs
maxima-native/src/: lib.rs
maxima-native/test/: example.c
maxima-resources/src/: lib.rs
maxima-service/: Cargo.toml
maxima-service/src/: main.rs  service.rs
maxima-service/src/service/: error.rs  mod.rs
maxima-tui/: Cargo.toml  build.rs
maxima-tui/src/: main.rs  service.rs
maxima-ui/: Cargo.toml  build.rs  rustfmt.toml
maxima-ui/res/locale/: en_us.json
maxima-ui/shaders/: abg.frag  abg.vert  gvbg.frag
maxima-ui/src/: bridge_processor.rs  bridge_thread.rs  desktop.rs  enum_locale_map.rs  event_processor.rs  event_thread.rs  frontend_processor.rs  game_info_image_handler.rs  interact_thread.rs  main.rs  translation_manager.rs  ui_image.rs
maxima-ui/src/bridge/: bitches.rs  game_details.rs  game_images.rs  get_friends.rs  get_games.rs  login_creds.rs  login_oauth.rs  mod.rs  start_game.rs
maxima-ui/src/fs/: image_loader.rs
maxima-ui/src/renderers/: app_bg_renderer.rs  game_view_bg_renderer.rs  mod.rs
maxima-ui/src/util/: markdown.rs
maxima-ui/src/views/: debug_view.rs  downloads_view.rs  friends_view.rs  game_view.rs  mod.rs  settings_view.rs  undefinied_view.rs
maxima-ui/src/widgets/: mod.rs
