[workspace]
resolver = "2"
members = [
    "maxima-bootstrap",
    "maxima-cli",
    "maxima-lib",
    "maxima-service",
    "maxima-tui",
    "maxima-ui",
    "maxima-resources",
]

[profile.release]
strip = true

[patch.crates-io]
flate2 = { git = 'https://github.com/ArmchairDevelopers/flate2-rs.git' }
async-compression = { git = 'https://github.com/ArmchairDevelopers/async-compression.git' }
