[package]
name = "maxima-bootstrap"
description = "Maxima handler for custom EA protocols"
version = "0.1.0"
authors = ["Sean Kahler <sean@battleda.sh>"]
edition = "2021"

[dependencies]
maxima-lib = { path = "../maxima-lib" }
tokio = { version = "1.28.2", features = [
    "full",
    "rt",
    "rt-multi-thread",
    "time",
    "net",
] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
anyhow = { version = "1.0.71", features = ["backtrace"] }
reqwest = "0.11.18"
base64 = "0.21.2"
url = "2.4.0"
querystring = "1.1.0"
urlencoding = "2.1.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "memoryapi",
    "handleapi",
    "synchapi",
    "wincon",
    "consoleapi",
] }
winreg = "0.50.0"
windows-service = "0.6.0"

[target.'cfg(target_os = "macos")'.dependencies]
cacao = "0.3.2"

[build-dependencies]
maxima-resources = { path = "../maxima-resources" }

[[bin]]
name = "maxima-bootstrap"
path = "src/main.rs"

[package.metadata.bundle]
name = "MaximaBootstrap"
identifier = "dev.armchairdevelopers.MaximaBootstrap"
osx_url_schemes = ["qrc", "link2ea", "origin2"]
