[package]
name = "maxima-cli"
version = "0.1.0"
authors = ["Sean Kahler <sean@battleda.sh>"]
edition = "2021"

[dependencies]
maxima-lib = { path = "../maxima-lib" }
clap = { version = "4.3.5", features = [ "derive" ] }
tokio = { version = "1.28.2", features = [ "full", "rt", "rt-multi-thread", "time", "net" ] }
serde = { version = "1.0.164", features = [ "derive" ] }
serde_json = "1.0.97"
quick-xml = { version = "0.29.0", features = [ "serialize" ] }
paste = "1.0.12"
anyhow = "1.0.71"
hex = "0.4.3"
lazy_static = "1.4.0"
reqwest = "0.11.18"
base64 = "0.21.2"
log = "0.4.19"
enable-ansi-support = "0.2.1"
chrono = "0.4.26"
regex = "1.8.4"
directories = "5.0.1"
inquire = "0.6.2"
futures = "0.3.30"

[target.'cfg(windows)'.dependencies]
openssl = "0.10.55"
winapi = { version = "0.3.9", features = [ "memoryapi", "handleapi", "synchapi", "wincon", "consoleapi" ] }
winreg = "0.50.0"
is_elevated = "0.1.2"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.55", features = ["vendored"] }

[build-dependencies]
maxima-resources = { path = "../maxima-resources" }

[[bin]]
name = "maxima-cli"
path = "src/main.rs"
