[package]
name = "maxima-native"
version = "0.1.0"
authors = ["Sean Kahler <sean@battleda.sh>"]
edition = "2021"

[dependencies]
maxima-lib = { path = "../maxima-lib" }
tokio = { version = "1.28.2", features = [
    "full",
    "rt",
    "rt-multi-thread",
    "time",
    "net",
] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
paste = "1.0.12"
anyhow = "1.0.71"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.19"
regex = "1.8.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "memoryapi",
    "handleapi",
    "synchapi",
    "wincon",
    "consoleapi",
    "psapi",
    "wininet",
    "winerror",
    "iphlpapi",
    "tcpmib",
    "winsvc",
] }
winreg = "0.50.0"
windows-service = "0.6.0"
is_elevated = "0.1.2"
widestring = "1.0.2"
dll-syringe = "0.15.2"

[build-dependencies]
maxima-resources = { path = "../maxima-resources" }
cbindgen = "0.25.0"

[lib]
name = "maxima_native"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]
