[package]
name = "maxima-tui"
version = "0.1.0"
authors = ["Sean Kahler <sean@battleda.sh>"]
edition = "2021"

[dependencies]
maxima-lib = { path = "../maxima-lib" }
clap = { version = "4.3.5", features = [ "derive" ] }
tokio = { version = "1.28.2", features = [ "full", "rt", "rt-multi-thread", "time", "net" ] }
serde = { version = "1.0.164", features = [ "derive" ] }
serde_json = "1.0.97"
anyhow = "1.0.71"
lazy_static = "1.4.0"
base64 = "0.21.2"
log = "0.4.19"
regex = "1.8.4"
inquire = "0.6.2"
futures = "0.3.30"
ratatui = "0.27.0"
strum = "0.26.0"
color-eyre = "0.6.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [ "memoryapi", "handleapi", "synchapi", "wincon", "consoleapi" ] }
winreg = "0.50.0"
is_elevated = "0.1.2"

[build-dependencies]
maxima-resources = { path = "../maxima-resources" }

[[bin]]
name = "maxima-tui"
path = "src/main.rs"
