[package]
name = "maxima-ui"
version = "0.1.0"
authors = ["Nick Whelan <cooldood909@gmail.com>"]
edition = "2021"

[dependencies]
maxima-lib = { path = "../maxima-lib" }
winapi = { version = "0.3.9", features = [ "memoryapi", "handleapi", "synchapi", "wincon", "consoleapi", "psapi", "wininet", "winerror", "iphlpapi", "tcpmib" ] }
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
#cmp = "0.0.0"
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = {version = "0.22.0", features = [ "svg" ] }
image = { version = "0.24.6", features = [ "png", "jpeg" ] }
reqwest = "0.11.18"
serde = "1.0.171"
serde_json = "1.0.100"
tokio = { version = "1.28.2", features = ["full"] }
log = "0.4.19"
egui_demo_lib = "0.22.0"

[build-dependencies]
maxima-resources = { path = "../maxima-resources" }

[[bin]]
name = "maxima"
path = "src/main.rs"
